[gd_scene load_steps=9 format=3 uid="uid://bv8hjbpyg2wb3"]

[ext_resource type="Script" uid="uid://e3k4jym0l8o4" path="res://directions_splash.gd" id="1_gr061"]
[ext_resource type="Texture2D" uid="uid://cdh11f0tu3plf" path="res://notepad_table_texture.tres" id="1_iq3va"]
[ext_resource type="FontFile" uid="uid://dye0q3v5hkk8u" path="res://Resources/ConnectionII.otf" id="2_gr061"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8jtnn"]
atlas = ExtResource("1_iq3va")

[sub_resource type="Animation" id="Animation_8jtnn"]
resource_name = "Fade"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(32, 270)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.15, 0.15)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Button:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_rm208"]
resource_name = "FadeIn"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(32, 270), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.15, 0.15), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Button:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_256nn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Button:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_256nn"]
_data = {
&"Fade": SubResource("Animation_8jtnn"),
&"FadeIn": SubResource("Animation_rm208"),
&"RESET": SubResource("Animation_256nn")
}

[node name="DirectionsSplash" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_gr061")
day = 4

[node name="Control" type="Node2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="Control"]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 136.0
offset_right = 261.0
offset_bottom = 122.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2.5)
size_flags_horizontal = 4
texture = SubResource("AtlasTexture_8jtnn")

[node name="TextureRect2" type="TextureRect" parent="Control"]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 376.0
offset_right = 501.0
offset_bottom = 122.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2.5)
size_flags_horizontal = 4
texture = SubResource("AtlasTexture_8jtnn")

[node name="Label" type="RichTextLabel" parent="Control"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 160.0
offset_top = 24.0
offset_right = 1200.0
offset_bottom = 1304.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
theme_override_fonts/normal_font = ExtResource("2_gr061")
theme_override_font_sizes/normal_font_size = 58
bbcode_enabled = true
text = "
"
structured_text_bidi_override = 4

[node name="Label2" type="RichTextLabel" parent="Control"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 400.0
offset_top = 24.0
offset_right = 1440.0
offset_bottom = 1304.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
theme_override_fonts/normal_font = ExtResource("2_gr061")
theme_override_font_sizes/normal_font_size = 58
bbcode_enabled = true
text = "

"

[node name="Button" type="Button" parent="."]
offset_left = 176.0
offset_top = 312.0
offset_right = 1101.0
offset_bottom = 420.0
scale = Vector2(0.2, 0.2)
focus_mode = 1
theme_override_fonts/font = ExtResource("2_gr061")
theme_override_font_sizes/font_size = 100
action_mode = 0
text = "Understood, boss."

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color(0, 0, 0, 0.572549)
z_index = -1
offset_right = 640.0
offset_bottom = 360.0
mouse_filter = 2

[node name="sfx" type="AudioStreamPlayer2D" parent="."]
process_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_256nn")
}

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
